tests/Fixtures/Torture/Bad/nested_kernel.g
// EXPECT G000
kernel { kernel { entry func Main() { } } }
